# RAG-Core-System

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
data/documents/: pgvector_intro.txt
docker/: docker-compose.test.yml  docker-compose.yml  init.sql
scripts/: verificar_conexion_db.py
src/rag_system/: __init__.py  cli.py  config.py
src/rag_system/graph/: __init__.py  build_graph.py  nodes.py  prompts.py  state.py
src/rag_system/ingestion/: __init__.py  embedder.py  loaders.py  pipeline.py  splitter.py
src/rag_system/llm/: __init__.py  provider.py
src/rag_system/retrieval/: __init__.py  retriever.py
tests/: conftest.py
tests/integration/: test_ingestion_retrieval.py
tests/unit/: test_graph_nodes.py  test_prompts.py  test_splitter.py
